--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,6 +22,13 @@
   font-size: large;
 }
 
+/* .myVideo{
+  position:fixed;
+  right:0;
+  bottom:0;
+  min-width:100%;
+  min-height:100%;
+} */
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
